--- a/templates/cloud.html
+++ b/templates/cloud.html
@@ -3,10 +3,7 @@
 <div class="box-logo"></div>
 <div class="box-info" align="justify">
   <strong>
-    Cuando hablamos de las condiciones de cielo nos referimos a la cantidad de
-    nubes. Los TES dependen también de la presencia de nubes, ya que estas
-    atenúan los rayos solares UV. Las Opciones representan el cielo al momento
-    de adquirir el TES:<br />
+    Cuando hablamos de las condiciones de cielo nos referimos a la cantidad de nubes. Los TES dependen también de la presencia de nubes, ya que estas atenúan los rayos solares UV. Las Opciones representan el cielo al momento de adquirir el TES:<br />
     1. Sin nubes o escasas nubes<br />
     2. Medio nublado o nubes abundantes<br />
     3. Cielo completamente nublado o muy nublado.
