--- a/templates/contact.html
+++ b/templates/contact.html
@@ -4,9 +4,9 @@
   <strong>
     Para consultas o ayuda escribe un correo a:<br /><br />
     Adriana Ipiña<br />
-    <i class="fa fa-envelope"></i> ipina@ifir-conicet.gov.ar<br /><br />
+    <i class="fa fa-envelope"></i>&nbsp;&nbsp;ipina@ifir-conicet.gov.ar<br/><br/>
     Gamaliel López-Padilla<br />
-    <i class="fa fa-envelope"></i> giovannilopez9808@gmail.com
+    <i class="fa fa-envelope"></i>&nbsp;&nbsp;giovannilopez9808@gmail.com
   </strong>
 </div>
 <br /><br />
