--- a/static/css/main.css
+++ b/static/css/main.css
@@ -101,7 +101,7 @@ img {
   width: 450px;
   vertical-align: middle;
   font-size: 1.1rem;
-  margin-top: -220px;
+  margin-top: -10rem;
 }
 .box-text {
   box-sizing: border-box;
